# maestro-bull

./: .flake8  .gitignore  LICENSE  README.md  manage.py  pyproject.toml
.github/workflows/: linter.yml
bull/apps/api/: apps.py  permissions.py  serializers.py  urls.py  validators.py
bull/apps/api/views/: __init__.py  hubcookie.py  jwt.py  users.py  xpaccounts.py
bull/apps/reports/: admin.py  apps.py
bull/apps/reports/migrations/: 0001_initial.py  0002_initial.py
bull/apps/reports/models/: __init__.py  base.py  captacao.py  positivador.py
bull/apps/slack/: admin.py  apps.py  elements.py  models.py  tasks.py  urls.py  views.py
bull/apps/slack/boletabot/: __init__.py  boletabot.py
bull/apps/slack/migrations/: 0001_initial.py
bull/apps/user/: admin.py  apps.py
bull/apps/user/migrations/: 0001_initial.py
bull/apps/user/models/: advisor.py  user.py
bull/apps/xpaccount/: admin.py  apps.py  exceptions.py  tasks.py  urls.py  views.py
bull/apps/xpaccount/migrations/: 0001_initial.py
bull/apps/xpaccount/models/: __init__.py  hubcookie.py  xpaccount.py
bull/core/: __init__.py  asgi.py  auth_backends.py  celery.py  exceptions.py  urls.py  wsgi.py
bull/core/settings/: __init__.py  base.py  dev.py  prod.py
bull/utils/: __init__.py  cookie_bookmarklet.js  enums.py  shortcuts.py
bull/utils/pydantic_types/: __init__.py  _yield.py  advisor.py  bool.py  cpf_cnpj.py  date.py  force.py  money.py  phone.py
bull/utils/xp_api/: __init__.py  enums.py  exceptions.py
bull/utils/xp_api/endpoints/: __init__.py  advisor_orders.py  advisors.py  available_assets.py  (+9 more)
(+43 files in other folders)
